# prosperitymodelling-vibe

./: .cursorrules  .env.dev  .env.prod  .gitignore  Dockerfile  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  bookmarklet-debug.js  bookmarklet-minified.js  bookmarklet.js  database-creation-flow.md  database_diagram.md  database_uml.md  docker-compose.dev.yml  docker-compose.yml  prosperityModelling.py  prosperity_modelling_explanation.md  pyproject.toml  run_app.sh  run_dev.bat  run_dev.sh  sequence_diagram.md  test_inference.py  test_multiclass.py  train_models.py  webappspec.md
app/: __init__.py
app/controllers/: auth.py  dashboard.py  dataset.py  visualization.py
app/lib/: __init__.py  data_processor.py  indicator_processor.py
app/migrations/: import_data.py  init_db.py
app/models/: __init__.py  indicators.py  ml_models.py  predictions.py  thresholds.py  user.py
app/services/: data_processor.py  model_trainer.py  visualization.py
app/templates/: base.html
app/utils/: constants.py  explore_gadm.py  extract_jabar.py  helpers.py  shapefile_processor.py
data/ekonomi/: daftar_upah_minimum.csv  indeks_pembangunan_manusia.csv  jml_penduduk_bekerja.csv  jml_pengeluaran_per_kapita.csv  pdrb_harga_konstan.csv  penduduk_miskin.csv  tingkat_pengangguran_terbuka.csv
data/infrastruktur/: akses_air_minum.csv  hunian_layak.csv  kawasan_pariwisata.csv  kendaraan.csv  panjang_ruas_jalan.csv  sanitasi_layak.csv  titik_layanan_internet.csv
data/kesehatan/: angka_harapan_hidup.csv  fasilitas_kesehatan.csv  imunisasi_dasar.csv  kematian_balita.csv  kematian_bayi.csv  (+2 more)
(+23 files in other folders)
