[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kesejahteraan"
version = "0.1.0"
description = "Data exploration project for welfare indicators analysis"
readme = "README.md"
requires-python = ">=3.11.10"
license = {text = "MIT"}
authors = [
    {name = "fauzanebd"}
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>1.24.4",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "scikit-learn>=1.2.0",
    "plotly>=5.14.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0", # For Excel file support
    "xlrd>=2.0.0", # For older Excel file formats
    "Flask>=2.2.3",
    "Flask-SQLAlchemy>=3.0.3",
    "Flask-Migrate>=4.0.4",
    "Flask-Login>=0.6.2",
    "SQLAlchemy>=2.0.7",
    "psycopg2-binary>=2.9.5",
    "gunicorn>=20.1.0",
    "Werkzeug>=2.2.3",
    "Jinja2>=3.1.2",
    "MarkupSafe>=2.1.2",
    "itsdangerous>=2.1.2",
    "click>=8.1.3",
    "alembic>=1.10.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.3.0",
]
geo = [
    "geopandas>=0.13.0",
    "folium>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"] 
